Fix alignment for forms on empty pages

--- a/src/frontend/web_application/src/components/LoginForm/style.scss
+++ b/src/frontend/web_application/src/components/LoginForm/style.scss
@@ -3,7 +3,12 @@
 
 
 .s-login {
-  max-width: map_get($co-form__width, 'xlarge');
+  @include flex-grid-size(12);
+
+  @include breakpoint(medium) {
+    @include flex-grid-size(4);
+    max-width: map-get($co-form__width, 'xlarge');
+  }
 
   &__brand {
     text-align: center;
@@ -21,5 +26,4 @@
   &__title {
     text-align: center;
   }
-
 }
